UCSFD8-640 - Fix wierd Youtube video layout issues on Microsoft Edge in specific breakpoints.

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -8983,10 +8983,8 @@ h3.twitter_user {
 
 .video-list {
   background: #121a31;
-  padding-top: 40px; }
-  @media (max-width: 599px) {
-    .video-list {
-      display: block; } }
+  padding-top: 40px;
+  overflow: hidden; }
   @media (min-width: 1050px) {
     .video-list {
       padding-top: 80px; } }
@@ -9159,14 +9157,14 @@ a.video_preview::before {
   border: 1px solid #121a31;
   background-color: #007cbe; }
 
-#block-youtubegallery .slick-list .slick-slide {
+#block-youtubegallery .slick-slide {
   margin: 0 16px;
   margin-right: 16px;
-  width: 208px;
+  width: 326px;
   border: none;
   border-radius: 0 0; }
   @media (min-width: 769px) {
-    #block-youtubegallery .slick-list .slick-slide {
+    #block-youtubegallery .slick-slide {
       margin-right: 48px;
       width: 263px; } }
 
